# aa-tps

./: .coveragerc  .editorconfig  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  eslint.config.mjs  package.json  pyproject.toml  stylelint.config.mjs  tox.ini
.claude/: settings.local.json
.github/workflows/: release.yml
aacampaign/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  esi.py  models.py  tasks.py  urls.py  views.py
aacampaign/management/commands/: aa_campaign_pull.py  aa_campaign_setup.py
aacampaign/migrations/: 0002_campaignkillmail_ship_type_id_and_more.py  0003_campaignkillmail_ship_group_name.py  0004_campaignkillmail_final_blow_alliance_id_and_more.py  0005_campaign_last_run.py
aacampaign/templates/aacampaign/: base.html  campaign_details.html  index.html
aacampaign/tests/: test_aa_campaign.py
aatps/: __init__.py  admin.py  apps.py  auth_hooks.py  esi.py  models.py  tasks.py  urls.py  utils.py  views.py
aatps/management/commands/: aa_tps_pull.py  aa_tps_setup.py
aatps/migrations/: 0001_initial.py  0002_campaignkillmail_ship_type_id_and_more.py  0003_campaignkillmail_ship_group_name.py  0004_campaignkillmail_final_blow_alliance_id_and_more.py  0005_campaign_last_run.py  0006_add_monthly_killmail_models.py  0007_migrate_campaign_killmails.py  0008_remove_legacy_models.py  0009_add_performance_indexes.py  0010_update_unique_constraint.py
aatps/tests/: factories.py  test_aatps.py  test_utils.py  test_views.py
testauth/: celery.py
testauth/settings/: local.py
(+3 files in other folders)
